@@ -48,15 +48,8 @@ if(CMAKE_VERSION VERSION_EQUAL "3.12" OR CMAKE_VERSION VERSION_GREATER "3.12")
     endif()
 else()
     find_package(PythonInterp 3 QUIET)
-    if(NOT PYTHONINTERP_FOUND)
-        set(PYTHONINTERP_FOUND "")
-        find_package(PythonInterp 2.7 QUIET)
-        if(NOT PYTHONINTERP_FOUND AND NOT USE_MATCHCOMPILER_OPT STREQUAL "Off")
-            message(WARNING "No python interpreter found - disabling matchcompiler.")
-            set(USE_MATCHCOMPILER_OPT "Off")
-        else()
-            message(WARNING "Support for Python 2.7 is deprecated (it went EOL in January 2020) and will be removed in Cppcheck 2.16 - please use Python 3.x instead.")
-        endif()
+    if(NOT PYTHONINTERP_FOUND AND NOT USE_MATCHCOMPILER_OPT STREQUAL "Off")
+        message(WARNING "No python interpreter found - disabling matchcompiler.")
     endif()
     if(PYTHONINTERP_FOUND)
         set(Python_EXECUTABLE ${PYTHON_EXECUTABLE})
